--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-C:/Users/tjana/.dotfiles/LaTeX/.gitignore
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.lof
+*.log
+*.synctex(busy)
+*.synctex.gz
+*.toc
+*.vscode
+*.xdv
+*.zip
